# StandartCProject

./: .clang-format  .gitignore  CMakeLists.txt  main.c  run.sh
Adder/: CMakeLists.txt  adder.c
