cmake_minimum_required(VERSION 3.13.4)
project(SCP)
add_executable(${PROJECT_NAME} main.c)
add_subdirectory(Adder)
add_subdirectory(external/glfw)
target_include_directories(${PROJECT_NAME} PUBLIC Adder)
target_link_directories(${PROJECT_NAME} PRIVATE Adder)
target_link_libraries(${PROJECT_NAME} adder)
